fix: align layout

--- a/src/components/ScrollerNavbar/index.css
+++ b/src/components/ScrollerNavbar/index.css
@@ -4,14 +4,13 @@
   align-items: center;
   width: 100%;
   gap: 4%;
-  padding-top: 1%;
-  padding-bottom: 1.2rem;
   background-color: #313338;
   color: #b5bac1;
   border-bottom: 1px solid black;
+  min-height: 3rem;
 
   & > .navbar__sep {
-    height: 100%;
+    height: 70%;
     border: 1px solid black;
   }
   & .icon_name {
